...
  ~ GNU General Public License for more details.
  -->

<resources>

    <!-- General -->
    <string name="preferences">Options</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <string name="arrow">Arrow</string>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <string name="passe">End</string>

    <!-- Overview -->
    <string name="new_training">New training</string>
...
    </plurals>
    <plurals name="passe_selected">
        <item quantity="one">%d end selected</item>
        <item quantity="other">%d ends selected</item>
    </plurals>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="statistic">Statistic</string>

    <!-- Share -->
    <string name="share">Share</string>
    <string name="dispersion_pattern">Dispersion pattern</string>
...
    <!-- Export -->
    <string name="send_exported">Send exported data</string>
    <string name="exporting_failed">Exporting failed!</string>

    <!-- New bow -->
    <string name="add_bow">Add bow</string>
    <string name="name">Name</string>
    <string name="bow_type">Bow type</string>
    <string name="properties">Properties</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="height">Brace height</string>
    <string name="tiller">Tiller</string>
    <string name="sight_settings">Sight settings</string>
    <string name="add">Add</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Select a picture from gallery</string>

    <!-- New arrow -->
    <string name="add_arrow">Add arrow</string>
    <string name="length">Length</string>
    <string name="spine">Spine</string>
    <string name="weight">Weight</string>
    <string name="vanes">Vanes</string>
    <string name="nock">Nock</string>
    <string name="material">Material</string>

...
        <item quantity="other">%d arrows</item>
    </plurals>

    <string name="target_face">Target face</string>

    <!-- Scoreboard -->
    <string name="scoreboard">Scoreboard</string>
    <string name="arrows">Arrows</string>
    <string name="sum">Score</string>
    <string name="carry">R.Total</string>
    <string name="action_print">Print</string>
    <string name="average">Average</string>

...
    <string name="donate_10">Donate me a large pizza</string>
    <string name="donate_20">Donate me some fuel</string>
    <string name="donation_thank">Thank you for your support!</string>
    <string name="donate_text" formatted="false">The amounts are incl. VAT and 30% fees for Google. Alternatively you may gladly donate on the PayPal account dreier.florian@gmail.com.</string>

    <!-- Timer -->
    <string name="timer">Timer</string>
    <string name="touch_to_start">Touch to start</string>
    <string name="preparation">Get ready</string>
    <string name="shooting">Shooting</string>

    <!-- Timer settings -->
    <string name="timer_shooting_time">Shooting Time</string>
    <string name="timer_waiting_time">Prepare Time</string>
    <string name="timer_warning_time">Warning Time</string>
    <string name="timer_sound">Sound</string>
    <string name="timer_vibrate">Vibrate</string>

    <!-- Settings -->
    <string name="backup_action">Backup</string>
    <string name="import_action">Import</string>
    <string name="exports_as_csv">Exports as csv</string>
    <string name="licences">Open Source-Licences</string>
    <string name="licences_summary">Legal notes to licences</string>
    <string name="version">Version %s</string>
    <plurals name="second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
...
    <string name="stabilizer">Stabilizer</string>
    <string name="clicker">Clicker</string>
    <string name="arrow_number_x">Arrow number %s</string>
    <string name="training_with_standard_round">Training with Standard Round</string>
    <string name="free_training">Free Training</string>
    <string name="competition">Competition</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="license_epl_name" translatable="false">Eclipse Public License - v 1.0</string>
    <string name="license_epl_url" translatable="false">https://www.eclipse.org/org/documents/epl-v10.php</string>
    <string name="contribute">Contribute</string>
    <string name="connect">Connect</string>
    <string name="special_thanks_to">Special thanks to</string>
...
    <string name="archer">Archer</string>
    <string name="hits">Hits</string>
    <string name="misses">Misses</string>
    <string name="new_end">New end</string>
    <string name="distribution">Distribution</string>
    <string name="count">Count</string>
    <string name="diameter">Diameter</string>
    <string name="input">Input</string>
    <string name="target_zoom">Target zoom level</string>
    <string name="action_pdf">Export as PDF</string>
    <string name="arrow_diameter_scale">Arrow diameter scale</string>
    <string translatable="false" name="transition_root_view">transition_root_view</string>
    <string name="timestamp">Timestamp</string>
    <string name="change_target_face">Change target face</string>
...
    <string name="bow_letoff_weight">Letoff weight</string>
    <string name="bow_nocking_point">Nocking point</string>
    <string name="bow_string">String</string>
    <string name="bow_scope_magnification">Scope magnification</string>
    <string name="bow_rest_stiffness">Stiffness</string>
    <string name="bow_button">Button</string>
    <string name="more_fields">More fields</string>
    <string name="recently_used">Recently used</string>
    <string name="intro_title_track_training_progress">Forget paper scoresheets!</string>
    <string name="intro_description_track_training_progress">With exact arrow plotting,\nyou can get more useful insights\nout of your training data.</string>
    <string name="intro_title_everything_in_one_place">Everything you need\nin one place</string>
    <string name="intro_description_everything_in_one_place">Including bow-, arrow-\nand sightmark-management,\narchery timer, statistics \nand much more…</string>
    <string name="average_arrow_score_per_end">Average arrow score per end</string>
    <string name="show_end">Show end</string>
    <string name="show_round">Show round</string>
    <string name="show_training">Show training</string>
    <string name="summary">Summary</string>
    <string name="end">End</string>
    <string name="average_of">Average of</string>
    <string name="displayed_shots">Displayed shots</string>
    <string name="invalid_decimal_number">Invalid decimal number</string>
    <string name="not_within_expected_range_mm">Not within the expected range of 1 to 20 mm</string>
    <string name="not_within_expected_range_inch">Not within the expected range of 0 to 1 inch</string>
    <string name="next_round">Next round</string>
    <string name="previous_round">Previous round</string>
    <string name="overview">Overview</string>
    <string name="score">Score</string>
    <string name="show_reached_score">Show reached score</string>
    <string name="show_total_score">Show total score</string>
...
