...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/diameterTextInputLayout"
                    style="@style/propertyTextInputLayout"
                    android:layout_toLeftOf="@+id/diameterUnit"
                    android:layout_toStartOf="@+id/diameterUnit"
                    app:errorText="@{arrow.diameterErrorText}">

                    <de.dreier.mytargets.views.TextInputEditText
                        android:id="@+id/diameter"
                        android:layout_width="match_parent"
...
